--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,20 @@
+body{
+font-family: 'Times New Roman';
+}
 
-/* 
+.container{
+background-color: rgba(0, 0, 0, 0.973);
+}
+
+h1{
+font-size: 4rem;
+}
+
+#numBox{
+border-left: 2px solid rgba(83, 83, 83, 0.87);
+border-right: 2px solid rgba(83, 83, 83, 0.87);
+}
+/*
 
     You can write your own styles here...
     
